Header almost done.(TODO)

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  padding: 0;
 }
 
 .header {
@@ -14,12 +15,78 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  position: relative;
+  border: 1px solid red;
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
+  z-index: 1000;
+  border: 1px solid red;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.logo__svg {
+  width: 183px;
+  height: 32px;
+  background-image: url(../images/logo_place_header.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header__title {
+  width: 730px;
+  margin: 0 0 0 64px;
+  padding: 0;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+  border: 1px solid red;
+}
+
+/* TODO: link */
+.header__subtitle {
+  width: 388px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 1000;
+  border: 1px solid red;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  border: 1px solid red;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  background-color: #2f80ed;
   height: 568px;
   width: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 1;
+  border: 1px solid red;
 }
 
 /* и элемента с модификатором вида ключ-значение */
