--- a/styles/style.css
+++ b/styles/style.css
@@ -138,7 +138,68 @@
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
-  font-weight: bolder;
+  font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section-title {
+  margin: 100px 0 0 0;
+  text-align: center;
+  padding: 0;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  margin: 20px 0 0 0;
+  text-align: center;
+  padding: 0;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  margin-bottom: 100px;
+  width: 1100px;
+  border-spacing: 0;
+}
+
+.table__row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
+.table__cell{
+  padding: 0;
+  margin: 0;
+  width: 250px;
+  vertical-align: top;
+}
+
+.table__heading {
+  padding: 0;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  padding: 0;
+  margin: 20px 0 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 /* и элемента с модификатором вида ключ-значение */
