--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,6 @@
 .logo__svg {
   width: 183px;
   height: 32px;
-  background-image: url(../images/logo_place_header.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .header__title {
@@ -54,7 +50,6 @@
   border: 1px solid red;
 }
 
-/* TODO: link */
 .header__subtitle {
   width: 388px;
   position: absolute;
@@ -65,6 +60,10 @@
   font-weight: normal;
   z-index: 1000;
   border: 1px solid red;
+}
+
+.header__link {
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -103,6 +102,7 @@
   margin-top: 100px;
   display: flex;
   justify-content: space-between;
+  border: 1px solid red;
 }
 
 .two-columns__brief {
@@ -124,15 +124,16 @@
 }
 
 .two-columns__paragraph {
-  margin: 0;
+  margin: 0 0 30px;
   padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  border: 1px solid red;
 }
 
-.two-columns__paragraph_marg {
-  margin: 30px 0;
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
@@ -200,6 +201,47 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+}
+
+.feinman {
+  height: 790px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-image: url(../images/feynman.png);
+  background-size: 836px 637px;
+  background-position: left 0 bottom 0;
+  background-repeat: no-repeat;
+}
+
+.feinman__title {
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 100px auto 0;
+  border: 1px solid red;
+}
+
+.feinman__subtitle {
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 70px auto 0;
+  border: 1px solid red;
+}
+
+.feinman__link {
+  text-decoration: none;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  right: 48px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
