--- a/styles/style.css
+++ b/styles/style.css
@@ -142,42 +142,51 @@
   font-weight: bold;
 }
 
-.digits {
+.flex-column {
   display: flex;
   align-items: center;
   flex-direction: column;
+  border: 1px solid red;
 }
 
 .section-title {
-  margin: 100px 0 0 0;
   text-align: center;
-  padding: 0;
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
+  border: 1px solid red;
+}
+
+.digits__section-title {
+  margin: 100px 0 20px;
 }
 
 .section-subtitle {
-  margin: 20px 0 0 0;
+  margin: 0;
   text-align: center;
-  padding: 0;
   width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  border: 1px solid red;
 }
 
 .table {
-  margin-bottom: 100px;
   width: 1100px;
   border-spacing: 0;
+  border: 1px solid red;
+}
+
+.digits__table {
+  margin-bottom: 100px;
 }
 
 .table__row {
   display: flex;
   justify-content: space-between;
   margin-top: 60px;
+  border: 1px solid red;
 }
 
 .table__cell{
@@ -185,6 +194,7 @@
   margin: 0;
   width: 250px;
   vertical-align: top;
+  border: 1px solid red;
 }
 
 .table__heading {
@@ -193,6 +203,7 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  border: 1px solid red;
 }
 
 .table__text {
@@ -201,6 +212,7 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  border: 1px solid red;
 }
 
 .feinman {
@@ -244,10 +256,42 @@
   right: 48px;
 }
 
+.kaufman {
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+  z-index: -2;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin: 90px 0 20px;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table_theme_dark {
+  margin-bottom: 90px;
+}
+
+.table__row_theme_dark {
+  margin-top: 80px;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
 }
