--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
 .logo {
   width: 183px;
   height: 32px;
-  z-index: 1000;
+  z-index: 10;
   border: 1px solid red;
 }
 
@@ -33,11 +33,6 @@
   position: absolute;
   top: 30px;
   left: 64px;
-}
-
-.logo__svg {
-  width: 183px;
-  height: 32px;
 }
 
 .header__title {
@@ -86,10 +81,6 @@
   top: 64px;
   z-index: 1;
   border: 1px solid red;
-}
-
-.content {
-  height: 100vh;
 }
 
 .description {
@@ -294,4 +285,92 @@
   top: 0;
   right: -210px;
   z-index: -1;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  border: 1px solid red;
+}
+
+.footer__columns {
+  margin: 60px 0 40px;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  border: 1px solid red;
+}
+
+.footer__column {
+  border: 1px solid red;
+}
+
+.footer__column_content_copyroght {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.logo_place_footer {
+  height: 35px;
+}
+
+.footer__author {
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  border: 1px solid red;
+}
+
+.footer__column-heading {
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  border: 1px solid red;
+}
+
+.footer__column-links {
+  margin: 20px 0 16px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  list-style: none;
+  padding: 0;
+  border: 1px solid red;
+}
+
+.footer__social-list {
+  margin: 20px 0 16px;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__line {
+  margin-bottom: 10px;
+  border: 1px solid red;
+}
+
+.footer__line:last-of-type {
+  margin-bottom: 0;
+}
+
+.footer__link {
+  text-decoration: none;
+  color: white;
+  display: flex;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  border: 1px solid red;
 }
