--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@
   font-size: 102px;
   line-height: 96px;
   font-weight: bold;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -50,11 +51,12 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  z-index: 1000;
+  z-index: 2;
 }
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -63,7 +65,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -74,7 +76,6 @@
   position: absolute;
   right: 0;
   top: 64px;
-  z-index: 1;
 }
 
 .description {
@@ -188,7 +189,7 @@
 }
 
 .feynman {
-  height: 790px;
+  min-height: 790px;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
@@ -218,6 +219,7 @@
 
 .feynman__link {
   text-decoration: none;
+  color: #2f80ed;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -233,20 +235,22 @@
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
-  z-index: -2;
 }
 
 .section-title_theme_dark {
   color: white;
   margin: 90px 0 20px;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
   color: white;
+  z-index: 2;
 }
 
 .table_theme_dark {
   margin-bottom: 90px;
+  z-index: 2;
 }
 
 .table__row_theme_dark {
@@ -263,10 +267,11 @@
   width: 877px;
   height: 877px;
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
+  z-index: 1;
 }
 
 .footer {
