--- a/styles/style.css
+++ b/styles/style.css
@@ -153,21 +153,20 @@
 .table {
   width: 1100px;
   border-spacing: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .digits__table {
-  margin-bottom: 100px;
-}
-
-.table__row {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 60px;
+  list-style: none;
+  margin: 0 0 100px;
+  padding: 0;
 }
 
 .table__cell{
   padding: 0;
-  margin: 0;
+  margin: 60px 0 0;
   width: 250px;
   vertical-align: top;
 }
@@ -249,16 +248,15 @@
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
+  list-style: none;
+  margin: 0 0 90px;
+  padding: 0;
   z-index: 2;
-}
-
-.table__row_theme_dark {
-  margin-top: 80px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
+  margin-top: 80px;
   width: 200px;
   color: white;
 }
