--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,12 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__line/footer__line.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
+@import url(../blocks/rotation/rotation.css);
+@import url(../blocks/techniques/techniques.css);
+@import url(../blocks/content/__techniques/content__techniques.css);
+@import url(../blocks/techniques/__section-title/techniques__section-title.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
