--- a/pages/index.css
+++ b/pages/index.css
@@ -57,3 +57,6 @@
 @import url(../blocks/video/__section-title/video__section-title.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
 @import url(../blocks/video/__iframe/video__iframe.css);
+@import url(../blocks/oakley/oakley.css);
+@import url(../blocks/description/__two-columns/description__two-columns.css);
+@import url(../blocks/oakley/__two-columns/oakley__two-columns.css);
