--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,8 +2,9 @@
   text-decoration: none;
   color: white;
   display: flex;
+  transition: opacity .6s linear;
 }
 
 .footer__link:hover {
-  color: #2f80ed;
+  opacity: .5;
 }
