--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,8 +1,9 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity .6s linear;
 }
 
 .header__link:hover {
-  font-weight: bold;
+  opacity: .5;
 }
