--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,4 +6,9 @@
   padding: 0;
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity .6s linear;
+}
+
+.khan__buy-link:hover {
+  opacity: .5;
 }
