--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background-image: url(../../images/feynman.png);
+  background-image: url("../../images/feynman.png");
   background-size: 836px 637px;
   background-position: left 0 bottom 0;
   background-repeat: no-repeat;
