--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -7,6 +7,7 @@
   text-decoration: none;
   color: #2f80ed;
   transition: opacity .6s linear;
+  align-self: flex-start;
 }
 
 .khan__buy-link:hover {
