--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,3 +1,9 @@
-.video__iframe:first-of-type {
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  border: none;
+}
+
+.video__iframe:first-child {
   margin-right: 20px;
 }
